[project]
authors = [{name = "SIKAI ZHANG", email = "matthew.szhang91@gmail.com"}]
dependencies = [
     "numpy >= 1.17",
    "scipy >= 1.3.1",
    "scikit-learn >= 0.22",
    "numba >= 0.51.2",
    "pynndescent >= 0.5",
    "tqdm",
]
description = "Umap fork"
name = "umap"
requires-python = ">= 3.10"
version = "0.5.6-beta"
readme = "README.rst"

classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
umap = { path = ".", editable = true }

[tool.pixi.feature.test.tasks]
test = { cmd = "pytest", cwd = "umap/tests" }

[tool.pixi.environments]
default = ["test"]
